kubernetes/talos-flux/apps/flux-system/gotk/webhook/ingress.yaml
---
# ingress in chart seems broken, maybe check back later
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns/cloudflare: "true"
    hajimari.io/enable: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: &host flux-webhook.techtales.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - secretName: webhook-receiver-tls
      hosts:
        - *host
